--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     url: jdbc:mysql://mes-dev.cyyxmbrc9eeg.ap-northeast-2.rds.amazonaws.com:3306/mes-dev?serverTimezone=UTC&characterEncoding=UTF-8
     username: admin
-    password: Silver01!#
+    password: SilverStar01!#
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
